[tool.poetry]
name = "value-logger"
version = "0.1.0"
description = ""
authors = ["kartikay-bagla <kartikaybagla@gmail.com>"]
readme = "README.md"
packages = [{include = "value_logger"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.101.0"
uvicorn = "^0.23.2"
SQLAlchemy = "^2.0.19"
psycopg2-binary = "^2.9.7"
requests = "^2.31.0"
psutil = "^5.9.5"
apscheduler = "^3.10.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.7.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
